maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:45: error: not found: value sommeAngle
                          {avance();sommeAngle+=1;return()}
                                    ^PledgeMaze:49: error: not found: value sommeAngle
                          droite();sommeAngle-=1;}
                                   ^