maze.pledge.PledgeMaze.scala.code
override def run() {
  var sommeAngle=0
  if (isDirectionFree(Direction.NORD))
  {setDirection(Direction.NORD)}
  while (!estSurBiscuit()) {sommeAngle=0
    allerAuNord();
    do            {keepHandOnSideWall()}            
                            
    while (!isDirectionFree(Direction.NORD)&&sommeAngle!=0)
  
  
  
  
}

}




def allerAuNord(){while (isDirectionFree(Direction.NORD))
                  {setDirection(Direction.NORD)
                   (avance)}}









def isDirectionFree(dir:Direction):Boolean =

{val or=getDirection()
; setDirection(dir);
val e=estFaceMur();
setDirection(or);
 return(!e)}


def keepHandOnSideWall() {gauche ();
                          if (!estFaceMur())
                          {avance();sommeAngle+=1;return()}
                          droite();
                          if (!estFaceMur())
                          {avance;return()};
                          droite();sommeAngle-=1;}
                         
                          